Can no longer scroll right on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 	background-size: cover;
 	font-family: "Open Sans" !important;
 	font-size: 12pt !important;
+	margin: 0px !important;
 	width: 100% !important;
 	padding-top: 50px;
 }
